--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Package Metadata/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Package+Metadata&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Package_Metadata.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="M&eacute;tadonn&eacute;es du package (87% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (17% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -105,9 +105,7 @@
 </p><p><span id="Attributes"></span>
 </p>
 <h4><span class="mw-headline" id="Attribute_3">Attribute</span></h4>
-<div class="mw-translate-fuzzy">
-<ul><li><code>file="FILE"</code> (optional): Ein relativer Pfad zur Datei <code>package.xml</code>, die den vollst&auml;ndigen Lizenztext enth&auml;lt. Viele Lizenzen verlangen, dass der Lizenztext bei der Weitergabe der Software mitgeliefert wird. Beispielsweise hei&szlig;t es in Absatz 4.1 der Apache-Lizenz, Version 2.0: "Sie m&uuml;ssen allen anderen Empf&auml;ngern des Werks oder abgeleiteter Werke eine Kopie dieser Lizenz zur Verf&uuml;gung stellen."</li></ul>
-</div>
+<ul><li>file="FILE" (optional): Ein relativer Pfad zur Datei <code>package.xml</code>, die den vollst&auml;ndigen Lizenztext enth&auml;lt. Viele Lizenzen verlangen, dass der Lizenztext bei der Weitergabe der Software mitgeliefert wird. Beispielsweise hei&szlig;t es in Absatz 4.1 der Apache-Lizenz, Version 2.0: "Sie m&uuml;ssen allen anderen Empf&auml;ngern des Werks oder abgeleiteter Werke eine Kopie dieser Lizenz zur Verf&uuml;gung stellen."</li></ul>
 <h3><span id=".3Ccontent.3E"></span><span class="mw-headline" id="&lt;content&gt;">&lt;content&gt;</span></h3>
 <p>ERFORDERLICH
 </p><p>Das &lt;content&gt;-Tag beschreibt den tats&auml;chlichen Inhalt des Pakets. Es hat keine Attribute und enth&auml;lt eine beliebige Anzahl von untergeordneten Elementen. Diese untergeordneten Elemente k&ouml;nnen beliebige Tag-Namen haben, von denen nur einige von FreeCAD erkannt werden. FreeCAD unterst&uuml;tzt derzeit die Elemente "workbench", "macro", "preferencepack", "bundle" (<span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span>) und "other" (<span style="font-size:small;"><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></span>). Jedes untergeordnete Element wird dann rekursiv durch diesen Standard definiert und enth&auml;lt einige oder alle Elemente, die f&uuml;r den Wurzelknoten &lt;package&gt; zul&auml;ssig sind. Zum Beispiel:
@@ -384,33 +382,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221403
+Cached time: 20260121221542
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.070 seconds
-Real time usage: 0.210 seconds
-Preprocessor visited node count: 523/1000000
-Post&#8208;expand include size: 7544/2097152 bytes
-Template argument size: 2675/2097152 bytes
+CPU time usage: 0.066 seconds
+Real time usage: 0.124 seconds
+Preprocessor visited node count: 513/1000000
+Post&#8208;expand include size: 7487/2097152 bytes
+Template argument size: 2631/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8525/5000000 bytes
+Unstrip post&#8208;expand size: 8528/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.293      1 -total
- 31.52%   22.469      1 Template:Powerdocnavi/de
- 31.36%   22.360     38 Template:Incode
- 12.87%    9.172      1 Template:Navigation_menu_2
-  7.14%    5.089      3 Template:Version/de
-  5.75%    4.099      1 Template:MenuCommand
-  4.28%    3.050      1 Template:Code
-  4.18%    2.980      1 Template:TOCright
+100.00%   36.734      1 -total
+ 28.41%   10.435      1 Template:Powerdocnavi/de
+ 15.16%    5.569      3 Template:Version/de
+ 14.72%    5.407      1 Template:TOCright
+ 14.68%    5.392     37 Template:Incode
+ 11.26%    4.135      1 Template:MenuCommand
+  6.54%    2.402      1 Template:Navigation_menu_2
+  6.11%    2.243      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221403 and revision id 1742133. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221542 and revision id 1742135. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
