--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -755,10 +755,8 @@ Modusentlastung:
 </p><p><span id="Limitations"></span>
 </p>
 <h2><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h2>
-<div class="mw-translate-fuzzy">
 <p><i>Hinweis</i> Es ist m&ouml;glich, dass zwischen den Versionen ein Fehler auftritt. Bitte das Problem im Forum melden und auf die aktualisierte Fehlerbehebung oder die R&uuml;ckkehr zu einer fr&uuml;heren Version des Makros warten. Vielen Dank.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Es ist m&ouml;glich, dass zwei Zeichen &uuml;berlappen. Wenn dies passiert, hier ist eine Problemumgehung verf&uuml;gbar unter Verwendung des <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Macro_Rotate_To_Point">Rotate-To-Point Makro</a>.
 </p>
@@ -961,13 +959,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121222418
+Cached time: 20260121222442
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.498 seconds
-Real time usage: 1.740 seconds
-Preprocessor visited node count: 1589/1000000
+CPU time usage: 0.443 seconds
+Real time usage: 0.653 seconds
+Preprocessor visited node count: 1588/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -977,19 +975,19 @@ Unstrip post&#8208;expand size: 66840/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1161.226      1 -total
-  1.95%   22.647      1 Template:Draft_Tools_navi/de
-  1.08%   12.589     14 Template:Incode
-  1.05%   12.236     10 Template:Code
-  0.96%   11.101      7 Template:RadioButton
-  0.92%   10.736     10 Template:CheckBox
-  0.91%   10.618      6 Template:SpinBox
-  0.91%   10.549     19 Template:Clear
-  0.84%    9.792      2 Template:Navigation_menu_2
-  0.83%    9.659     14 Template:TRUE
+100.00%  326.557      1 -total
+  3.12%   10.196      1 Template:Draft_Tools_navi/de
+  1.98%    6.464      1 Template:Macro/de
+  1.80%    5.874     10 Template:CheckBox
+  1.69%    5.507      7 Template:RadioButton
+  1.65%    5.373     10 Template:Code
+  1.47%    4.785      6 Template:SpinBox
+  1.36%    4.441      2 Template:Navigation_menu_2
+  1.11%    3.638      1 Template:Codeextralink
+  1.08%    3.515     14 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222416 and revision id 1742177. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260121222442 and revision id 1742179. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
