--- a/wiki/it/PartDesign_InvoluteGear.html
+++ b/wiki/it/PartDesign_InvoluteGear.html
@@ -1,11 +1,11 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">PartDesign InvoluteGear/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-PartDesign+InvoluteGear&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--med" title="PartDesign Evolventenzahnrad (68% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Evolventenzahnrad (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../PartDesign_InvoluteGear.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="PartDesign InvoluteGear (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign InvoluteGear/tr (0% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--low" title="Dise&ntilde;oPiezas EngranajeEvolvente (7% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Engrenage &agrave; d&eacute;veloppante (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Roue dent&eacute;e &agrave; d&eacute;veloppante (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--high" title="Projekt Cz&#281;&#347;ci: Ko&#322;o z&#281;bate ewolwentowe (95% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--complete" title="Projekt Cz&#281;&#347;ci: Ko&#322;o z&#281;bate ewolwentowe (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--low" title="Assistente de projeto de engrenagem envolvente (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign: Angrenaj cilindric cu din&#539;i drep&#539;i &icirc;n evolvent&#259; (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../cs/PartDesign_InvoluteGear.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign InvoluteGear (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
@@ -20,7 +20,6 @@
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_PartDesign.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -31,7 +30,7 @@
 <th class="ctOdd">Posizione nel menu
 </th></tr>
 <tr>
-<td class="ctEven">Part Design &rarr; Ruota dentata ad evolvente...
+<td class="ctEven">Part Design &rarr; Ruota dentata ad evolvente
 </td></tr>
 <tr>
 <th class="ctOdd">Ambiente
@@ -55,12 +54,11 @@
 <th class="ctOdd">Vedere anche
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../it/FCGear_Workbench.html" class="mw-redirect" title="FCGear Workbench/it">Ambiente FCGear</a>
+<td class="ctEven"><a href="../it/Gear_Workbench.html" title="Gear Workbench/it">Ambiente Gear</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -241,35 +239,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251202213820
+Cached time: 20260122080804
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.136 seconds
-Preprocessor visited node count: 1614/1000000
-Post&#8208;expand include size: 27220/2097152 bytes
-Template argument size: 7745/2097152 bytes
+CPU time usage: 0.133 seconds
+Real time usage: 0.301 seconds
+Preprocessor visited node count: 1613/1000000
+Post&#8208;expand include size: 27206/2097152 bytes
+Template argument size: 7731/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2624/5000000 bytes
+Unstrip post&#8208;expand size: 2638/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.875      1 -total
- 23.85%   10.226     26 Template:PropertyData
- 19.99%    8.572      1 Template:PartDesign_Tools_navi/it
- 17.12%    7.339     27 Template:Variable
- 11.56%    4.955      1 Template:Userdocnavi/it
-  9.38%    4.020      2 Template:Navigation_menu_2
-  6.74%    2.889      5 Template:Version/it
-  6.65%    2.850      2 Template:Docnav/it
-  6.22%    2.667      1 Template:PropertyView
-  5.41%    2.320      1 Template:GuiCommand/it
+100.00%   51.288      1 -total
+ 26.43%   13.553     26 Template:PropertyData
+ 24.89%   12.768      1 Template:PartDesign_Tools_navi/it
+ 19.33%    9.913     27 Template:Variable
+ 16.53%    8.476      2 Template:Navigation_menu_2
+ 11.34%    5.814      1 Template:Userdocnavi/it
+  6.86%    3.520      1 Template:GuiCommand/it
+  5.27%    2.703      1 Template:PropertyView
+  5.18%    2.655      2 Template:Docnav/it
+  4.41%    2.262      5 Template:Version/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:30465-0!canonical and timestamp 20251202213820 and revision id 1706149. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:30465-0!canonical and timestamp 20260122080803 and revision id 1742188. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
