--- a/wiki/it/Macro_GMSH.html
+++ b/wiki/it/Macro_GMSH.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_GMSH.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro GMSH (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_GMSH.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro GMSH (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_GMSH.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro GMSH (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_GMSH.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: GMSH (7% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_GMSH.html" class="mw-pt-progress mw-pt-progress--med" title="Macro GMSH/ru (29% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -120,10 +120,9 @@ webbrowser.open("https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/maste
 <p>La macro si pu&ograve; trovare nel seguente repositorio github: <a rel="nofollow" class="external text" href="https://github.com/psicofil/Macros_FreeCAD/blob/master/Macros/GMSHMesh.FCMacro">GMSH Macro</a>
 </p><p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_GMSH.png&amp;filetimestamp=20190616114245&amp;.html" class="mw-file-description"><img src="../File/Macro_GMSH.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b>GMSHMesh.FCMacro GMSH Macro.FCMacro</b>
+</p><p><span id="Additional_Installations"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Additional_Installations">Additional Installations</span></h2>
-</div>
+<h2><span class="mw-headline" id="Installazioni_aggiuntive">Installazioni aggiuntive</span></h2>
 <p>GMSH deve essere installato. Vedere <a rel="nofollow" class="external text" href="http://gmsh.info/">gmsh.info</a>. La macro &egrave; idonea per essere eseguita su sistema operativo Linux, OSX e Windows. Il percorso binario di Gmsh deve essere adattato nella macro.
 </p><p><span id="Links"></span>
 </p>
@@ -135,29 +134,29 @@ webbrowser.open("https://raw.githubusercontent.com/psicofil/Macros_FreeCAD/maste
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122104412
+Cached time: 20260122104416
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.038 seconds
+CPU time usage: 0.041 seconds
+Real time usage: 0.065 seconds
 Preprocessor visited node count: 112/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 989/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2114/5000000 bytes
+Unstrip post&#8208;expand size: 2118/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.299      1 -total
- 46.38%    1.994      1 Template:Macro/it
- 27.10%    1.165      1 Template:Codeextralink
- 22.84%    0.982      1 Template:Clear
+100.00%    8.227      1 -total
+ 45.30%    3.727      1 Template:Macro/it
+ 27.76%    2.284      1 Template:Codeextralink
+ 22.95%    1.888      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20260122104412 and revision id 1742218. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:60468-0!canonical and timestamp 20260122104416 and revision id 1742220. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
