--- a/wiki/it/Macro_Make_Arc_3_Points.html
+++ b/wiki/it/Macro_Make_Arc_3_Points.html
@@ -75,16 +75,12 @@ Arco da 3 punti
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro crea un arco da 3 punti selezionati
+</p><p><span id="Usage"></span>
 </p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <p>Avviare la macro, poi selezionare 3 punti. Viene creato uno arco. Le coordinate e la lunghezza dell'arco sono visualizzati nella vista rapporto.
 </p>
 </div>
@@ -141,13 +137,13 @@ s=SelObserver()
 FreeCADGui.Selection.addObserver(s)</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260122104529
+Cached time: 20260122104543
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.065 seconds
-Preprocessor visited node count: 99/1000000
+CPU time usage: 0.023 seconds
+Real time usage: 0.036 seconds
+Preprocessor visited node count: 95/1000000
 Post&#8208;expand include size: 1954/2097152 bytes
 Template argument size: 1827/2097152 bytes
 Highest expansion depth: 5/100
@@ -157,12 +153,12 @@ Unstrip post&#8208;expand size: 2651/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.978      1 -total
- 58.73%    4.685      1 Template:Macro/it
- 39.78%    3.174      1 Template:MacroCode
+100.00%    4.510      1 -total
+ 61.22%    2.761      1 Template:Macro/it
+ 36.25%    1.635      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69923-0!canonical and timestamp 20260122104529 and revision id 1742224. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69923-0!canonical and timestamp 20260122104543 and revision id 1742228. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
