--- a/wiki/it/Macro_Make_Arc_3_Points.html
+++ b/wiki/it/Macro_Make_Arc_3_Points.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Make_Arc_3_Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Bogen aus drei Punkten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Make_Arc_3_Points.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Make Arc 3 Points (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Make_Arc_3_Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Make Arc 3 Points (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Make_Arc_3_Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Utw&oacute;rz &#322;uk przez 3 punkty (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -79,12 +79,8 @@ Arco da 3 punti
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <p>Avviare la macro, poi selezionare 3 punti. Viene creato uno arco. Le coordinate e la lunghezza dell'arco sono visualizzati nella vista rapporto.
-</p>
-</div>
-<p>Nota:non &egrave; necessario tenere premuto il tasto Ctrl
+</p><p>Nota:non &egrave; necessario tenere premuto il tasto Ctrl
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -137,28 +133,28 @@ s=SelObserver()
 FreeCADGui.Selection.addObserver(s)</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260122104543
+Cached time: 20260122104552
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.023 seconds
-Real time usage: 0.036 seconds
-Preprocessor visited node count: 95/1000000
+CPU time usage: 0.040 seconds
+Real time usage: 0.080 seconds
+Preprocessor visited node count: 91/1000000
 Post&#8208;expand include size: 1954/2097152 bytes
 Template argument size: 1827/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2651/5000000 bytes
+Unstrip post&#8208;expand size: 2652/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.510      1 -total
- 61.22%    2.761      1 Template:Macro/it
- 36.25%    1.635      1 Template:MacroCode
+100.00%    9.050      1 -total
+ 56.01%    5.069      1 Template:Macro/it
+ 42.18%    3.817      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69923-0!canonical and timestamp 20260122104543 and revision id 1742228. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69923-0!canonical and timestamp 20260122104552 and revision id 1742230. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
