--- a/wiki/it/Macro_Make_Arc_3_Points.html
+++ b/wiki/it/Macro_Make_Arc_3_Points.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Make_Arc_3_Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Bogen aus drei Punkten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Make_Arc_3_Points.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Make Arc 3 Points (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Make_Arc_3_Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Make Arc 3 Points (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Make_Arc_3_Points.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Utw&oacute;rz &#322;uk przez 3 punkty (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -82,15 +82,9 @@ Arco da 3 punti
 <p>Avviare la macro, poi selezionare 3 punti. Viene creato uno arco. Le coordinate e la lunghezza dell'arco sono visualizzati nella vista rapporto.
 </p><p>Nota:non &egrave; necessario tenere premuto il tasto Ctrl
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Script_2">Script</span></h2>
 <p>L'icona per la barra degli strumenti: <span typeof="mw:File"><a href="../index.php?title=Macro_Make_Arc_3_Points.png&amp;filetimestamp=20160629155214&amp;.html" class="mw-file-description"><img src="../File/Macro_Make_Arc_3_Points.png" decoding="async" width="36" height="36" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_Make_Arc_3_Points.FCMacro</b> 
+</p><p><b>Macro_Make_Arc_3_Points.FCMacro</b> 
 </p>
 <pre># -*- coding: utf-8 -*-
 from FreeCAD import Base
@@ -133,28 +127,28 @@ s=SelObserver()
 FreeCADGui.Selection.addObserver(s)</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260122104552
+Cached time: 20260122104645
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.080 seconds
-Preprocessor visited node count: 91/1000000
+CPU time usage: 0.032 seconds
+Real time usage: 0.045 seconds
+Preprocessor visited node count: 86/1000000
 Post&#8208;expand include size: 1954/2097152 bytes
 Template argument size: 1827/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2652/5000000 bytes
+Unstrip post&#8208;expand size: 2656/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.050      1 -total
- 56.01%    5.069      1 Template:Macro/it
- 42.18%    3.817      1 Template:MacroCode
+100.00%    6.901      1 -total
+ 50.99%    3.519      1 Template:Macro/it
+ 46.66%    3.220      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69923-0!canonical and timestamp 20260122104552 and revision id 1742230. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69923-0!canonical and timestamp 20260122104645 and revision id 1742234. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
