--- a/wiki/it/Macro_Repro_Wire.html
+++ b/wiki/it/Macro_Repro_Wire.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Repro Wire/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Repro+Wire&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Repro Wire (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Linienzug kopieren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Repro_Wire.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Repro Wire (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Repro Wire (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
@@ -73,11 +73,11 @@ Replica un componente
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro crea un duplicato di un oggetto, subObject, faccia, contorno o linea, selezionato.<br>(Incluso con la versione FreeCAD 0.19&nbsp;: Menu &rarr; Part &rarr; Creare una copia)
 </p>
 </div>
@@ -220,30 +220,30 @@ except Exception:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251009170004
+Cached time: 20260122104755
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.154 seconds
+CPU time usage: 0.040 seconds
+Real time usage: 0.077 seconds
 Preprocessor visited node count: 128/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 5668/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6495/5000000 bytes
+Unstrip post&#8208;expand size: 6503/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.630      1 -total
- 36.98%    4.670      1 Template:Macro/it
- 23.25%    2.936      1 Template:MacroCode
- 21.98%    2.776      1 Template:Clear
- 13.28%    1.677      1 Template:Caption
+100.00%   10.476      1 -total
+ 36.89%    3.864      1 Template:Macro/it
+ 27.13%    2.842      1 Template:MacroCode
+ 17.86%    1.871      1 Template:Clear
+ 14.34%    1.502      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20251009170004 and revision id 1659068. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122104755 and revision id 1742238. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
