--- a/wiki/it/Macro_Repro_Wire.html
+++ b/wiki/it/Macro_Repro_Wire.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Linienzug kopieren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Repro_Wire.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Repro Wire (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Repro Wire (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Repro Wire (6% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_Repro_Wire.html" class="mw-pt-progress mw-pt-progress--low" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; Repro Wire (&#1044;&#1091;&#1073;&#1083;&#1080;&#1088;&#1086;&#1074;&#1072;&#1090;&#1100; &#1050;&#1088;&#1080;&#1074;&#1091;&#1102;) (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -76,17 +76,13 @@ Replica un componente
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Questa macro crea un duplicato di un oggetto, subObject, faccia, contorno o linea, selezionato.<br>(Incluso con la versione FreeCAD 0.19&nbsp;: Menu &rarr; Part &rarr; Creare una copia)
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Macro_ReproWire_00.png&amp;filetimestamp=20151024182612&amp;.html" class="mw-file-description"><img src="../File/Macro_ReproWire_00.png" decoding="async" width="480" height="360" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span>
+<p>Questa macro crea una copia di un oggetto o sotto-oggetto selezionato (inclusa in FreeCAD dalla versione 0.19: <a href="../it/Part_SimpleCopy.html" title="Part SimpleCopy/it">SimpleCopy di Part</a>).
+</p><p><span typeof="mw:File"><a href="../index.php?title=Macro_ReproWire_00.png&amp;filetimestamp=20151024182612&amp;.html" class="mw-file-description"><img src="../File/Macro_ReproWire_00.png" decoding="async" width="480" height="360" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">ReproWire</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <p>Selezionare l'oggetto e poi eseguire la macro per creare la sua copia. &Egrave; possibile usare la copia per produrre delle estrusioni o altre ordinarie operazioni.
@@ -220,30 +216,30 @@ except Exception:
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122104755
+Cached time: 20260122104924
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.077 seconds
-Preprocessor visited node count: 128/1000000
+CPU time usage: 0.042 seconds
+Real time usage: 0.088 seconds
+Preprocessor visited node count: 124/1000000
 Post&#8208;expand include size: 2722/2097152 bytes
 Template argument size: 5668/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6503/5000000 bytes
+Unstrip post&#8208;expand size: 6504/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.476      1 -total
- 36.89%    3.864      1 Template:Macro/it
- 27.13%    2.842      1 Template:MacroCode
- 17.86%    1.871      1 Template:Clear
- 14.34%    1.502      1 Template:Caption
+100.00%   15.768      1 -total
+ 33.45%    5.275      1 Template:Macro/it
+ 27.70%    4.368      1 Template:Caption
+ 27.39%    4.319      1 Template:MacroCode
+  9.01%    1.421      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122104755 and revision id 1742238. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:62346-0!canonical and timestamp 20260122104924 and revision id 1742242. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
